Small spacing issue.

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -27,7 +27,8 @@
   color: black;
   font-size: 31px;
   font-weight: bold;
-  margin-top: 1rem;
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 
 .home-card-product {
